@@ -7,7 +7,7 @@
     "homepage": "https://mods.factorio.com/mod/colonel_will",
     "factorio_version": "0.17",
     "dependencies": [
-        "base >= 0.17.26"
+        "base >= 0.17.35"
     ],
     "description": "Streamer ColonelWill server mod"
 }
