@@ -1,9 +1,3 @@
-[mod-setting-name]
-colonelwill_escape-pod_science-increment-amount=Escape Pod - Science Increment Amount
-
-[mod-setting-description]
-colonelwill_escape-pod_science-increment-amount=How many of each science pack the espace pod technology cost will increase by.
-
 [entity-name]
 escape-pod=Escape pod
 
