@@ -1,0 +1,33 @@
+[entity-name]
+escape-pod-v2=Escape pod
+
+[entity-description]
+escape-pod-v2=Lets a player ride a rocket in to space
+
+[technology-name]
+escape-pod-v2=Escape pod core part
+recruit-workforce-member-v2=Recruit new workforce member
+
+[technology-description]
+escape-pod-v2=Multiple escape pod core part levels must be researched to build an escape pod.
+recruit-workforce-member-v2=Recruit another workforce member with each level to the project.
+
+[technology-modifier]
+espace-pod-v2=Escape pod lets a player ride a rocket in to space.
+
+[api-description]
+escape_pod_add_level-v2=: Add this amount of extra escape pod researches that must be done to unlock the Escape Pod.
+
+[gui-caption]
+colonelwill-recruited-label-v2=Workforce on shift: __1__ / __2__
+colonelwill-tech-label-v2=Escape pod parts researched: __1__ / __2__
+colonelwill-funding-header-label-v2=Escape Pod Part Funding
+colonelwill-funding-part-label-v2=1 part takes 1k of each science
+colonelwill-funding-tier1-label-v2=tier 1 sub = 1 part
+colonelwill-funding-tier2-label-v2=tier 2 sub = 2 part
+colonelwill-funding-tier3-label-v2=tier 3 sub = 5 part
+colonelwill-funding-bits-label-v2=500 bits per part
+colonelwill-funding-donation-label-v2=£5 per part
+
+[gui-tooltip]
+colonelwill-recruited-label-v2=Number of workforce present out of number recruited to join the MP game.
