@@ -1,4 +1,4 @@
-local modeFilePath = "modes/escape-pod-v1"
+local modeFilePath = "modes/escape-pod-v2"
 local Commands = require("utility/commands")
 local Utils = require("utility/utils")
 local Constants = require("constants")
@@ -17,7 +17,6 @@ local function EscapePodAddPart(command)
     end
     game.print("escape_pod_add_level added " .. value .. " levels")
     global.Mod.escapeTechLevelsRequired = global.Mod.escapeTechLevelsRequired + value
-    global.Mod.escapeTechLevelsAdded = global.Mod.escapeTechLevelsAdded + value
     Gui.RefreshAll()
 end
 
@@ -27,7 +26,7 @@ local function OnRocketLaunched(event)
         return
     end
     for name, count in pairs(rocket.get_inventory(defines.inventory.rocket).get_contents()) do
-        if name == "escape-pod" and count > 0 and not global.Mod.gameFinished then
+        if name == "escape-pod-v2" and count > 0 and not global.Mod.gameFinished then
             global.Mod.gameFinished = true
             game.set_game_state {game_finished = true, player_won = true, can_continue = true, victorious_force = rocket.force}
         end
@@ -36,18 +35,25 @@ end
 
 local function OnResearchFinished(event)
     local technology = event.research
-    if technology.name == "recruit-workforce-member" then
-        global.Mod.recruitedWorkforceCount = technology.level - 1
+    if string.find(technology.name, "recruit-workforce-member-v2", 0, true) then
+        game.print(technology.level)
+        if technology.level == 10 and technology.researched then
+            global.Mod.recruitedWorkforceCount = 10
+        elseif technology.level >= 5 then
+            global.Mod.recruitedWorkforceCount = technology.level - 1
+        else
+            global.Mod.recruitedWorkforceCount = technology.level
+        end
         Gui.RefreshAll()
-    elseif string.find(technology.name, "escape-pod", 0, true) and not global.Mod.escapeTechCompleted then
-        global.Mod.escapeTechLevelsDone = global.Mod.escapeTechLevelsDone + (technology.research_unit_count / 1000)
+    elseif string.find(technology.name, "escape-pod-v2", 0, true) and not global.Mod.escapeTechCompleted then
+        global.Mod.escapeTechLevelsDone = technology.level - 1
         local force = technology.force
         if global.Mod.escapeTechLevelsDone == global.Mod.escapeTechLevelsRequired then
-            force.recipes["escape-pod"].enabled = true
+            force.recipes["escape-pod-v2"].enabled = true
             technology.enabled = false
             game.print("Escape Pod Unlocked", Constants.Color.green)
             global.Mod.escapeTechCompleted = true
-        elseif technology.name == "escape-pod-5" then
+        elseif technology.name == "escape-pod-v2-21" then
             local alreadyQueued = false
             for _, queuedResearch in pairs(force.research_queue) do
                 if queuedResearch.name == technology.name then
@@ -71,14 +77,13 @@ local function CreateGlobals()
     global.Mod = global.Mod or {}
     global.Mod.gameFinished = global.Mod.gameFinished or false
     global.Mod.recruitedWorkforceCount = global.Mod.recruitedWorkforceCount or 0
-    global.Mod.escapeTechLevelsRequired = global.Mod.escapeTechLevelsRequired or 20
+    global.Mod.escapeTechLevelsRequired = global.Mod.escapeTechLevelsRequired or 25
     global.Mod.escapeTechLevelsDone = global.Mod.escapeTechLevelsDone or 0
-    global.Mod.escapeTechLevelsAdded = global.Mod.escapeTechLevelsAdded or 0
     global.Mod.escapeTechCompleted = global.Mod.escapeTechCompleted or false
 end
 
 local function OnLoad()
-    Commands.Register("escape_pod_add_level", {"api-description.escape_pod_add_level"}, EscapePodAddPart, true)
+    Commands.Register("escape_pod_add_level", {"api-description.escape_pod_add_level-v2"}, EscapePodAddPart, true)
     Utils.DisableSiloScript()
 end
 
